# set10108

./: .gitignore
assessment/CW1/DataCollator/DataCollator/: DataCollator.sln
assessment/CW1/Source files/: block_chain.cpp  block_chain.h  main.cpp  sha256.cpp
assessment/CW1/Source files - Parallelised/: CMakeLists.txt  block_chain.cpp  block_chain.h  block_chain_par_while.cpp  block_chain_par_while.h  main.cpp  sha256_par_for.cpp  sha256_par_for.h
labs/lab01/lab1/: lab1.sln
labs/lab01/lab1/lab1/: lab1.cpp  lab1.vcxproj  montecarlo.csv  montecarlo.ods  stdafx.h
labs/lab02/Lab2/: Lab2.sln
labs/lab02/Lab2/ConditionVariables/: ConditionVariables.cpp  ConditionVariables.vcxproj  ConditionVariables.vcxproj.filters  stdafx.h
labs/lab02/Lab2/GuardedObjects/: GuardedObjects.cpp  GuardedObjects.vcxproj  GuardedObjects.vcxproj.filters  guarded.cpp  guarded.h  stdafx.h
labs/lab02/Lab2/Lab2/: Lab2.cpp  Lab2.vcxproj  stdafx.h
labs/lab02/Lab2/ThreadSafeDataStructures/: ThreadSafeDataStructures.cpp  ThreadSafeDataStructures.vcxproj  ThreadSafeDataStructures.vcxproj.filters  stdafx.h  threadsafe_stack.h
labs/lab03/Lab3/: Lab3.sln
labs/lab03/Lab3/BubbleSort/: BubbleSort.cpp  BubbleSort.vcxproj  bubble.csv  pch.h
labs/lab03/Lab3/Lab3/: Lab3.cpp  Lab3.vcxproj  pch.h  (+1 more)
labs/lab05/Mpi/: CMakeLists.txt
labs/lab05/mpi build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mpis_stuff.sln  mpis_stuff.vcxproj  mpis_stuff.vcxproj.filters
labs/lab08/GPU_programming/: GPU_programming.sln
(+20 files in other folders)
